child route ,  lazy loading , layout template

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+
+<div class="grid-container">
+  <div class="item1">
+    <app-my-nav></app-my-nav>
+  </div>
+  <div class="item3"><router-outlet></router-outlet></div>  
+  <div class="item5">Footer</div>
+</div>
+
+</body>
+</html>
