--- a/src/app/my-nav/my-nav.component.scss
+++ b/src/app/my-nav/my-nav.component.scss
@@ -4,7 +4,7 @@
     line-height: 40px;
     display: flex;
     justify-content: space-between;
-    background-color: #ff0014c4;
+    background-color:darkgrey;
 }
 
 .link {
